2004-02-24  Bruno Haible  <bruno@clisp.org>

	* hello-csharp*/autogen.sh: Copy also the csharp.m4 file.

2004-02-02  Bruno Haible  <bruno@clisp.org>

	* hello-*/autoclean.sh, hello-*/m4/Makefile.am: Handle glibc2.m4 too.

2004-01-29  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.1 released.

2004-01-28  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14 released.

2004-01-28  Bruno Haible  <bruno@clisp.org>

	* po/tr.po: Update from Nilgün Belma Bugüner <nilgun@superonline.com>.

2004-01-17  Bruno Haible  <bruno@clisp.org>

	* po/Makefile.am (POTFILES): Add hello-csharp, hello-csharp-forms
	sources.
	(SMALLPOTS): Add hello-csharp.pot, hello-csharp-forms.pot.
	(hello-csharp.pot, hello-csharp-forms.pot): New rules.
	(SMALLPOFILES_FOR_lang): Add hello-csharp, hello-csharp-forms elements.
	(../hello-csharp/po/$(LL).po, ../hello-csharp-forms/po/$(LL).po): New
	rules.
	* po/mmsmallpo.sh: Use option --force-po.

2004-01-17  Bruno Haible  <bruno@clisp.org>

	* hello-*/po/Makefile.am: Adapt to changes made in po/Makefile.in.in.

2004-01-17  Bruno Haible  <bruno@clisp.org>

	* po/af.po: New file, from Ysbeer <ysbeer@af.org.za>.
	* po/ca.po: Update from Ivan Vilata i Balaguer <ivan@selidor.net>.
	* po/de.po: Update from Karl Eichwalder <ke@gnu.franken.de>.
	* po/fr.po: Update from Michel Robitaille <robitail@iro.umontreal.ca>.
	* po/ja.po: Update from Masahito Yamaga <ma@yama-ga.com>.
	* po/nl.po: New file, from Elros Cyriatan <cyriatan@fastmail.fm>.
	* po/pl.po: Update from Rafał Maszkowski <rzm@icm.edu.pl>.
	* po/sk.po: New file, from Marcel Telka <marcel@telka.sk>.
	* po/sv.po: Update from Jan Djärv <jan.h.d@swipnet.se>.
	* po/zh_CN.po: Update from Funda Wang <fundawang@linux.net.cn>.
	* po/LINGUAS: Add af, nl, sk.
	* hello-*/po/LINGUAS: Update.
	* Makefile.am (EXAMPLESFILES): Add the new message catalogs.

2004-01-10  Bruno Haible  <bruno@clisp.org>

	* hello-c++-kde/admin: New directory, from KDE 3.1.4.
	* hello-c++-kde/auto*.sh: Don't create/remove the contents of the